# omnigrasp

./: .gitignore  download_data.sh  pyproject.toml
phc/: run_hydra.py
phc/data/assets/urdf/grab/: hockey_stick.urdf
phc/data/cfg/: config.yaml
phc/data/cfg/env/: env_x_grab_z.yaml  env_x_visual_grab_z.yaml
phc/env/tasks/: base_task.py
phc/learning/: im_amp_players.py
phc/utils/: flags.py  grasp_pkl.py  object_assets.py  object_traj_waypoints.py  traj_generator_3d.py
scripts/: render_grab_headless.py  render_policy_skeleton.py  test_isaacgym_load.py
scripts/data_process/: create_object_pkl.py  export_object_traj.py
scripts/vis/: create_object_traj_viser.py  vis_trajectories_viser.py
